# Arotake

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: RTO_ISO_regions.README
scripts/: Analyze_HRRR_vs_ISDLite_time_series_by_RTO_ISO_region.py  Construct_ISDLite_data_netCDF_for_RTO_ISO_regions.py  test.py
src/arotake/: interpolation.py  plotting.py  statistics.py
tests/: test_test.py
