[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arotake"
version = "1.0.0rc1"
description = "Short description"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]

dependencies = [
  "cartopy>=0.25.0",
  "geopandas>=1.1.1",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "regionmask>=0.13.0",
  "shapely>=2.1.1",
  "xarray>=2025.8.0",
  "xesmf>=0.8.10; python_version < '3.13'",
  "isd-lite-data @ git+https://github.com/jankazil/isd-lite-data@v2.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arotake"]

[tool.ruff]
line-length = 128
target-version = "py310"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

#
# MyPy is disabled because static analysis cannot account for all
# dynamic runtime behaviors, mypy may report false positives which
# do no reflect actual runtime issues.
#
#[tool.mypy]
#python_version = "3.10"
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#no_implicit_optional = true
#check_untyped_defs = true
#strict_optional = true
#pretty = true
#namespace_packages = true
#mypy_path = "src"
#files = ["src/arotake", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
